oxford-blue-nph.css
/* ... */
/* START Journal Header */

.journal-title h1::before,
.is-journals h1::before {
	content: "📅";
	font-size: 0.75em;
	margin-right: 10px;
	vertical-align: text-bottom;
}

/* Journal Header END */

/* START TASKS */

.form-checkbox {
	border-radius: var(--radius-sm);
}

.form-checkbox:checked {
	border: none;
}

.priority {
	font-size: 0;
	visibility: hidden;
}

a[priority]::before,
.priority::before {
	background-repeat: no-repeat;
	border: 1px solid var(--transparent);
	border-radius: 100%;
	display: inline-block;
	font-size: 12px;
	height: 16px;
	visibility: visible;
	width: 16px;
}

a[priority]::before {
	/* display: inline-flex ; */
	margin-right: 5px;
	/* margin-top: 5px; */
}

a.tooltip-priority {
	transition: none;
}

a[priority="A"]::before,
.priority[href="#/page/A"]::before {
	background-color: var(--red);
	content: " ";
}
a[priority="B"]::before,
.priority[href="#/page/B"]::before {
	background-color: var(--orange);
	content: " ";
}
a[priority="C"]::before,
.priority[href="#/page/C"]::before {
	background-color: var(--green);
	content: " ";
}

.timestamp,
[data-drawer-name="logbook"] {
	font-style: italic;
}

/* TASKS END*/

/* START External Link */

.external-link::before {
	content: "🌏";
	margin-right: 5px;
}

.external-link {
	border-bottom: 1px dotted var(--external-link-color);
	color: var(--external-link-color);
}

.external-link:hover {
	border-bottom: 1px dotted var(--external-link-color-hover);
	color: var(--external-link-color-hover);
}

/* External Link END */

/* START Bullet & Bullet Container */

.bullet-container {
	height: 20px;
	width: 20px;
}

.block-children-left-border:hover {
	background-color: rgba(var(--havelock-blue), 0.6);
	border-radius: var(--radius-lg);
}

a:hover > .bullet-container .bullet {
	background-color: rgba(var(--havelock-blue), 1);
	box-shadow: 0 0 0 2px var(--ls-primary-background-color),
		0 0 0 4px rgba(var(--havelock-blue), 1);
	transform: scale(1.4);
	transition: var(--transition);
}

.ls-block .bullet {
	background-color: rgba(var(--havelock-blue), 1);
	box-shadow: 0 0 0 2px var(--ls-primary-background-color),
		0 0 0 4px rgba(var(--havelock-blue), 1);
	display: block;
	transition: var(--transition);
}

/*=========================================================*/
/* === START highlight current path by cannibalox v0.2 ===*/
/*=========================================================*/

.ls-block:not(:focus-within) .bullet {
	background-color: var(--ls-block-bullet-color);
	box-shadow: none;
}

/* .block-children:not(:focus-within) {
  border-left: 1px solid var(--ls-guideline-color);
} */

/*========================================================*/
/* === highlight current path by cannibalox v0.2  END ===*/
/*========================================================*/

.block-children-container:focus-within > .block-children-left-border {
	background-color: rgba(var(--havelock-blue), 0.5);
	transition: var(--transition);
}

/* Bullet & Bullet Container END */

/* Inline Header Tags Adjustments */

.ls-block :is(h1, h2) {
	border: none;
	margin: 0;
}

.ls-block :is(h1, h2, h3, h4, h5, h6)::after {
	background-size: 16px 16px;
	content: "";
	display: inline-flex;
	height: 16px;
	margin-left: 5px;
	opacity: 0;
	vertical-align: middle;
	width: 16px;
}

.ls-block :is(h1, h2, h3, h4, h5, h6):hover::after {
	opacity: 1;
	transition: all 0.5s ease-in-out;
}

.ls-block h1::after {
	background-image: url("./assets/h1.svg");
}

.ls-block h2::after {
	background-image: url("./assets/h2.svg");
}

.ls-block h3::after {
	background-image: url("./assets/h3.svg");
}

.ls-block h4::after {
	background-image: url("./assets/h4.svg");
}

.ls-block h5::after {
	background-image: url("./assets/h5.svg");
}

.ls-block h6::after {
	background-image: url("./assets/h6.svg");
}

.editor-inner .h1.uniline-block,
.ls-block h1 {
	font-size: 2em;
	min-height: 1.5em;
}

.editor-inner .h2.uniline-block,
.ls-block h2 {
	font-size: 1.5em;
	min-height: 1.5em;
	position: relative;
	top: -3px;
}

.editor-inner .h3.uniline-block,
.ls-block h3 {
	font-size: 1.3em;
	min-height: 1.5em;
	position: relative;
	top: -4px;
}

.editor-inner .h4.uniline-block,
.ls-block h4,
.editor-inner .h5.uniline-block,
.ls-block h5,
.editor-inner .h6.uniline-block,
.ls-block h6 {
	font-size: 1em;
	min-height: 1.5em;
	position: relative;
	top: -5px;
}

.editor-inner .multiline-block:is(.h1, .h2, .h3, .h4, .h5, .h6)::first-line,
.editor-inner .uniline-block:is(.h1, .h2, .h3, .h4, .h5, .h6),
.ls-block :is(h1, h2, h3, h4, h5, h6) {
	font-weight: 600;
}

.editor-inner .uniline-block:is(.h1, .h2),
.ls-block :is(h1, h2) {
	border-bottom: 1px solid var(--ls-quaternary-background-color);
	margin: 0.4em 0 0;
}

.block-ref .editor-inner :is(.h1, .h2),
.block-ref .ls-block :is(h1, h2) {
	border-bottom: none;
}

.block-ref :is(h1, h2, h3, h4, h5, h6) {
	border-bottom: none;
	font-size: 1rem;
}

.editor-inner .uniline-block:is(.h1, .h2),
.ls-block :is(h1, h2) {
	border-bottom: var(--transparent);
}

.doc-mode .block-children {
	border-left: none !important;
}

.document-mode .editor-inner .h1,
.document-mode .ls-block h1 {
	margin: 0.34em 0;
}

.document-mode .editor-inner .h2,
.document-mode .ls-block h2 {
	margin: 0.3em 0;
}

.document-mode .editor-inner .h3,
.document-mode .ls-block h3 {
	margin: 0.28em 0;
}

.document-mode .editor-inner .h4,
.document-mode .ls-block h4 {
	margin: 0.26em 0;
}

.document-mode .editor-inner .h5,
.document-mode .ls-block h5 {
	margin: 0.24em 0;
}

.document-mode .editor-inner .h6,
.document-mode .ls-block h6 {
	margin: 0.22em 0;
}

.document-mode .ls-block {
	margin-bottom: 0rem;
}

/* Header Tag Adjustments END */

/* START #tag  */

.content a.tag {
	--tag-border: 135, 169, 186;
	--tag-bg-color: 245, 251, 254;
	background-color: rgba(var(--tag-bg-color), 0.1);
	border: 1px solid var(--transparent);
	border-radius: var(--radius-sm);
	color: var(--ls-primary-text-color);
	display: inline;
	font-size: 1em;
	padding: 0 5px;
}
/* ... */

